--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,8 @@
 
         <dep.antlr.version>4.7.1</dep.antlr.version>
         <dep.airlift.version>0.183.3</dep.airlift.version>
-        <dep.packaging.version>${dep.airlift.version}</dep.packaging.version>
+        <!-- <dep.packaging.version>${dep.airlift.version}</dep.packaging.version> -->
+        <dep.packaging.version>0.183</dep.packaging.version>
         <dep.slice.version>0.36</dep.slice.version>
         <dep.aws-sdk.version>1.11.445</dep.aws-sdk.version>
         <dep.okhttp.version>3.9.0</dep.okhttp.version>
